# scinterop

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: api.md  cache.md  cli.md  contributing.md  detection.md  h5ad.md  index.md  installation.md  mtx.md  provenance.md  rds.md  schema.md
scinterop/: __init__.py  cache.py  cli.py  detect.py  errors.py  h5ad.py  mtx.py  provenance.py  python_runner.py  r_runner.py  rds.py  schema.py  validate.py
scinterop/tests/: test_cache.py  test_detect.py  test_h5ad.py  test_mtx.py  test_provenance.py  test_schema.py  test_validate.py
tutorial/: pbmc3k_test.ipynb
