[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scinterop"
version = "0.1.0"
description = "Single-cell data interoperability between R and Python formats"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Qwi813"},
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.8",
    "pandas>=1.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
anndata = ["anndata>=0.10"]
dev = ["pytest", "pytest-cov"]

[project.scripts]
scinterop = "scinterop.cli:main"

[tool.setuptools.packages.find]
include = ["scinterop*"]
